--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,52 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="64dp"
+    android:height="64dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group>
+    <clip-path
+        android:pathData="M-0,0h512v512h-512z"/>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M274.81,385C257.43,385 217.95,374.11 180.84,344.04C154.99,323.1 162.51,331.67 153.12,299.15C137.19,243.92 126.69,177.93 153.12,157.33C175.66,139.77 218.16,139.54 247.56,128.76C270.67,120.29 259.87,145.09 284.51,145.09C317.35,145.09 311.02,128.76 333.78,128.76C363.52,128.76 362.44,148.14 371.76,196.1C381.6,246.76 368.56,309.48 339.29,337.36C326.04,349.98 291.18,385 274.81,385Z"
+        android:fillColor="#BFD7B0"/>
+    <path
+        android:pathData="M263,369a10,10 0,1 0,20 0a10,10 0,1 0,-20 0z"
+        android:fillColor="#9B9A83"/>
+    <path
+        android:pathData="M199,297a10,10 0,1 0,20 0a10,10 0,1 0,-20 0z"
+        android:fillColor="#9B9A83"/>
+    <path
+        android:pathData="M335,257a10,10 0,1 0,20 0a10,10 0,1 0,-20 0z"
+        android:fillColor="#9B9A83"/>
+    <path
+        android:pathData="M238,147a10,10 0,1 0,20 0a10,10 0,1 0,-20 0z"
+        android:fillColor="#9B9A83"/>
+    <path
+        android:pathData="M273.67,370C280.05,337.32 192.19,323.18 210.52,297"
+        android:strokeWidth="5"
+        android:fillColor="#00000000"
+        android:strokeColor="#F78A79"/>
+    <path
+        android:pathData="M270,370a3,3 0,1 0,6 0a3,3 0,1 0,-6 0z"
+        android:fillColor="#F78A79"/>
+    <path
+        android:pathData="M208,298a3,3 0,1 0,6 0a3,3 0,1 0,-6 0z"
+        android:fillColor="#374EB1"/>
+    <path
+        android:pathData="M210,298.01C268.93,317.39 307.83,235.45 346,257.94"
+        android:strokeWidth="5"
+        android:fillColor="#00000000"
+        android:strokeColor="#374EB1"/>
+    <path
+        android:pathData="M340,257a3,3 0,1 0,6 0a3,3 0,1 0,-6 0z"
+        android:fillColor="#CB3127"/>
+    <path
+        android:pathData="M343.7,257C383.53,216.14 183.64,203.45 247.81,146"
+        android:strokeWidth="5"
+        android:fillColor="#00000000"
+        android:strokeColor="#CB3127"/>
+    <path
+        android:pathData="M245,146a3,3 0,1 0,6 0a3,3 0,1 0,-6 0z"
+        android:fillColor="#CB3127"/>
+  </group>
 </vector>
